Add new assets and index.html

--- a/irancell/index.html
+++ b/irancell/index.html
@@ -172,7 +172,7 @@ body {
       <!-- تصویر سمت چپ -->
       <div class="lg:w-1/2 w-full h-[40%]">
         <img 
-          src="/images/img1.webp" 
+          src="./images/img1.webp" 
           sizes="(max-width: 1024px) 100vw, 628px"
           alt="پشتیبانی ایرانسل" 
           class="rounded-xl shadow-lg w-full h-full object-cover"
@@ -184,7 +184,7 @@ body {
         <!-- کارت‌ها با ارتفاع یکسان -->
         <div class="flex-1 flex flex-col  justify-between mb-[32px]">
           <div class="flex items-start">
-            <img src="/images/icon1.svg" alt="خدمات تلفن و اینترنت همراه" class=" w-[48px] h-[48px]  rounded-[12px] flex items-center justify-center mb-4 ml-3w-7  flex-shrink-0 mx-3   bg-[#f2bf11]">
+            <img src="./images/icon1.svg" alt="خدمات تلفن و اینترنت همراه" class=" w-[48px] h-[48px]  rounded-[12px] flex items-center justify-center mb-4 ml-3w-7  flex-shrink-0 mx-3   bg-[#f2bf11]">
             <div class="text-sm leading-tight ">
               <h5 class="font-semibold mb-1 flex items-center text-[20px] leading-[32px]">خدمات تلفن و اینترنت همراه</h5>
               <p>تماس با <a href="tel:700" class="text-blue-600 hover:underline text-[20px] font-normal leading-[28px]">۷۰۰</a> از خطوط ایرانسل و <a href="tel:09377000000" class="text-blue-600 hover:underline">۰۹۳۷۷۰۰۰۰۰۰</a> از سایر خطوط</p>
@@ -194,7 +194,7 @@ body {
 
         <div class="flex-1 flex flex-col justify-between mb-[32px] ">
           <div class="flex items-start">
-            <img src="/images/icon2.svg" alt="خدمات اینترنت ثابت" class="w-[48px] h-[48px]  rounded-[12px] flex items-center justify-center mb-4 ml-3w-7  flex-shrink-0 mx-3   bg-[#f2bf11]">
+            <img src="./images/icon2.svg" alt="خدمات اینترنت ثابت" class="w-[48px] h-[48px]  rounded-[12px] flex items-center justify-center mb-4 ml-3w-7  flex-shrink-0 mx-3   bg-[#f2bf11]">
             <div class="text-sm leading-tight">
               <h5 class="font-semibold mb-1 flex items-center text-[20px] leading-[32px]">خدمات اینترنت ثابت</h5>
               <p>تماس با <a href="tel:707" class="text-blue-600 hover:underline text-[20px] font-normal leading-[28px]">۷۰۷</a> از خطوط ایرانسل و <a href="tel:09377070000" class="text-blue-600 hover:underline">۰۹۳۷۷۰۷۰۰۰۰</a> از سایر خطوط</p>
@@ -204,7 +204,7 @@ body {
 
         <div class="flex-1 flex flex-col justify-between mb-[32px]">
           <div class="flex items-start">
-            <img src="/images/icon3.svg" alt="خدمات و محصولات سازمانی" class="w-[48px] h-[48px]  rounded-[12px] flex items-center justify-center mb-4 ml-3w-7  flex-shrink-0 mx-3   bg-[#f2bf11]">
+            <img src="./images/icon3.svg" alt="خدمات و محصولات سازمانی" class="w-[48px] h-[48px]  rounded-[12px] flex items-center justify-center mb-4 ml-3w-7  flex-shrink-0 mx-3   bg-[#f2bf11]">
             <div class="text-sm leading-tight">
               <h5 class="font-semibold mb-1 flex items-center text-[20px] leading-[32px]">خدمات و محصولات سازمانی</h5>
               <p>تماس با <a href="tel:714" class="text-blue-600 hover:underline text-[20px] font-normal leading-[28px]">۷۱۴</a> از خطوط ایرانسل و <a href="tel:09377140000" class="text-blue-600 hover:underline">۰۹۳۷۷۱۴۰۰۰۰</a> از سایر خطوط</p>
@@ -214,7 +214,7 @@ body {
 
         <div class="flex-1 flex flex-col justify-between mb-[32px]">
           <div class="flex items-start">
-            <img src="/images/icon4.svg" alt="خدمات فیبر نوری" class="w-[48px] h-[48px]  rounded-[12px] flex items-center justify-center mb-4 ml-3w-7  flex-shrink-0 mx-3   bg-[#f2bf11]">
+            <img src="./images/icon4.svg" alt="خدمات فیبر نوری" class="w-[48px] h-[48px]  rounded-[12px] flex items-center justify-center mb-4 ml-3w-7  flex-shrink-0 mx-3   bg-[#f2bf11]">
             <div class="text-sm leading-tight">
               <h5 class="font-semibold mb-1 flex items-center text-[20px] leading-[32px]">خدمات فیبر نوری</h5>
               <p>تماس با <a href="tel:789" class="text-blue-600 hover:underline text-[20px] font-normal leading-[28px]">۷۸۹</a> از خطوط ایرانسل و <a href="tel:09377890000" class="text-blue-600 hover:underline">۰۹۳۷۷۸۹۰۰۰۰</a> از سایر خطوط</p>
