--- a/practice-project/index.html
+++ b/practice-project/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ایرانسل | تمرین</title>
+    <title>ایرانسل | تمرdddین</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./font.css" />
     <link rel="icon" href="./images/logo.svg">
