bugfix : fixed site responsiveness

--- a/nima-nozary/mobinet/index.html
+++ b/nima-nozary/mobinet/index.html
@@ -9,41 +9,48 @@
   </head>
   <body>
     <header class="">
-      <div
-        class="top-header bg-black w-full h-[60px] flex justify-between px-[220px] items-center relative"
-      >
-        <div class="right flex h-full items-end  >
-          <a class="">
-            <p
-              class="text-[#a3c426]  text-[14px] border-b-4 border-b-[#a3c426]  pb-4 "
-            >
-              محصولات خانگی
-            </p>
-          </a>
-          <a id="tab2">
-            <p class="text-[#b1b1b1] text-[14px] mr-[20px] border-b-4 border-b-[#000]  pb-4">خدمات سازمانی</p>
-          </a>
-        </div>
-        <div class="left flex items-center  ">
-          <a href="">
-            <p class="text-[#b1b1b1] text-[14px]">
-              %جشنواره اینترنت فیبر نوری%
-            </p>
-          </a>
-          <div
-            class="safhe-moshtrakin bg-[#2f2f2f] h-[45px] px-[25px] rounded-[50px] mr-[20px] flex text-center items-center"
-          >
-            <a href="" class="flex justify-center">
-              <img
-                src="./assets/images/account.png"
-                alt="account-icon"
-                class="w-[25px] h-[25px] ml-3"
-              />
-              <span class="text-white text-[14px]">صفحه مشترکین</span>
+      <div class="top-bg bg-black w-full h-[60px] flex justify-center">
+        <div
+          class="top-header w-full 2xl:w-[1570px] flex h-[60px] justify-between px-[220px] items-center relative"
+        >
+          <div class="right flex h-full items-end">
+            <a href="#">
+              <p
+                class="text-[#a3c426] text-[14px] border-b-4 border-b-[#a3c426] pb-4"
+              >
+                محصولات خانگی
+              </p>
             </a>
+            <a id="tab2">
+              <p
+                class="text-[#b1b1b1] text-[14px] mr-[20px] border-b-4 border-b-[#000] pb-4"
+              >
+                خدمات سازمانی
+              </p>
+            </a>
+          </div>
+          <div class="left flex items-center">
+            <a href="">
+              <p class="text-[#b1b1b1] text-[14px]">
+                %جشنواره اینترنت فیبر نوری%
+              </p>
+            </a>
+            <div
+              class="safhe-moshtrakin bg-[#2f2f2f] h-[45px] px-[25px] rounded-[50px] mr-[20px] flex text-center items-center"
+            >
+              <a href="" class="flex justify-center">
+                <img
+                  src="./assets/images/account.png"
+                  alt="account-icon"
+                  class="w-[25px] h-[25px] ml-3"
+                />
+                <span class="text-white text-[14px]">صفحه مشترکین</span>
+              </a>
+            </div>
           </div>
         </div>
       </div>
+
       <div
         class="bot-header bg-[#262626] w-full h-[110px] px-[200px] flex justify-center items-center"
       >
@@ -54,10 +61,10 @@
             class="ml-10"
           />
         </a>
-        <div class="navbar flex h-full gap-8 justify-center items-center">
+        <div class="navbar flex h-full gap-8 justify-center items-center z-50">
           <div class="internet-item h-full">
             <div
-              class="internet relative group  mr-[5px] flex items-center h-full transition-all duration-300 ease-in-out hover:border-b-[6px] border-b-[#a3c426]"
+              class="internet relative group mr-[5px] flex items-center h-full transition-all duration-300 ease-in-out hover:border-b-[6px] border-b-[#a3c426]"
             >
               <a href="" class="flex justify-center gap-[7px] h-[23px]">
                 <img
@@ -107,9 +114,8 @@
                   >محصولات Huawei
                 </span>
               </a>
-              
-              </div>
             </div>
+          </div>
           <div class="aboutUs-item h-full">
             <div
               class="internet relative group flex items-center h-full transition-all duration-300 ease-in-out hover:border-b-[6px] border-b-[#a3c426]"
@@ -120,7 +126,9 @@
                   alt="account-icon"
                   class="w-[25px] h-[25px] opacity-50"
                 />
-                <span class="text-white text-[18px] h-full">درباره مبین نت</span>
+                <span class="text-white text-[18px] h-full"
+                  >درباره مبین نت</span
+                >
               </a>
               <div
                 class="first-item-bar absolute bottom-[-220px] right-0 mt-2 hidden group-hover:block bg-black shadow-lg rounded-b-xl w-[300px] py-2"
@@ -150,7 +158,7 @@
           </div>
           <div class="frosh-item h-full">
             <div
-              class="internet relative group  flex items-center h-full transition-all duration-300 ease-in-out hover:border-b-[6px] border-b-[#a3c426]"
+              class="internet relative group flex items-center h-full transition-all duration-300 ease-in-out hover:border-b-[6px] border-b-[#a3c426]"
             >
               <a href="" class="flex justify-center gap-[7px] h-[23px]">
                 <img
@@ -186,9 +194,9 @@
               </div>
             </div>
           </div>
-          <div class="poshtibani h-full">
+          <div class="poshtibani hidden 2xl:block h-full">
             <div
-              class="internet relative group  flex items-center h-full transition-all duration-300 ease-in-out hover:border-b-[6px] border-b-[#a3c426]"
+              class="internet relative group flex items-center h-full transition-all duration-300 ease-in-out hover:border-b-[6px] border-b-[#a3c426]"
             >
               <a href="" class="flex justify-center gap-[7px] h-[23px]">
                 <img
@@ -224,23 +232,39 @@
               </div>
             </div>
           </div>
-          <div class="froshgah ">
-            <a href="" class="flex justify-center gap-[7px] w-[150px] h-[54px] bg-[#A3C426] items-center rounded-[500px]">
-                <img
-                  src="./assets/images/account.png"
-                  alt="account-icon"
-                  class="w-[25px] h-[25px]"
-                />
-                <span class="text-black text-[18px] ">فروشگاه</span>
-              </a>
-          </div>
+          <div class="froshgah">
+            <a
+              href=""
+              class="flex justify-center gap-[7px] w-[150px] h-[54px] bg-[#A3C426] items-center rounded-[500px]"
+            >
+              <img
+                src="./assets/images/account.png"
+                alt="account-icon"
+                class="w-[25px] h-[25px]"
+              />
+              <span class="text-black text-[18px]">فروشگاه</span>
+            </a>
           </div>
         </div>
       </div>
     </header>
-    <section class="top-banner w-full h-[220px] bg-[url('./assets/images/banner.jpg')] bg-cover bg-center ">
-      <div class="relative image w-full h-[220px] bg-[linear-gradient(to_right,rgba(167,205,57,0.5),rgba(12,87,83,0.5))] ">
-        <div class="absolute top-[30px] right-[60%] mr-[15px] w-[469px] h-[469px] animate-[spin_50s_linear_infinite]">
+    <section
+      class="top-banner w-full h-[220px] bg-[url('./assets/images/banner.jpg')] bg-cover bg-center"
+    >
+      <div
+        class="relative image w-full h-[220px] bg-[linear-gradient(to_right,rgba(167,205,57,0.5),rgba(12,87,83,0.5))] bg-cover bg-center"
+      >
+        <div
+          class="texts absolute translate-x-1/2 right-1/3 xl:translate-x-1/2 2xl:translate-x-1/3 -translate-y-1/2 top-1/2 2xl:right-1/4 xl:right-1/3"
+        >
+          <h1 class="text-white font-black text-[48px]">درباره‌ مبین‌نت</h1>
+          <p class="text-white font-extralight text-[30px]">
+            شرکت ارتباطات مبین‌نت را بیشتر بشناسید
+          </p>
+        </div>
+        <div
+          class="absolute top-[30px] right-[60%] mr-[15px] w-[469px] h-[469px] animate-[spin_50s_linear_infinite]"
+        >
           <img src="./assets/images/circle-sign-transparent.png" />
         </div>
       </div>
